# orderbook-simulator

./: .gitignore  README.MD
orderbook-lib/: CMakeLists.txt
orderbook-lib/exe/: CMakeLists.txt  README.MD  split_by_instruments.cpp  test_file_reader.cpp  test_line_parsers.cpp  utils.h
orderbook-lib/exe/common/: utils.h
orderbook-lib/exe/debug/: test_file_reader.cpp  test_line_parsers.cpp  test_order_book.cpp
orderbook-lib/exe/preprocess/: find_px_step.cpp  split_by_instruments.cpp
orderbook-lib/include/orderbook/: Event.h  OrderBook.h  OrderBook.hpp
orderbook-lib/include/parsers/: Constants.h  FileReader.h  FileReader.hpp  LineParsers.h  LineParsers.hpp  PriceStepsExtractor.h
orderbook-lib/src/orderbook/: Event.cpp  OrderBook.cpp
orderbook-lib/src/parsers/: EquityCsvParser.cpp  LineParsers.cpp  PriceStepsExtractor.cpp
